Made the rack background image always visible. This fixes a visual bug that happened when you played all your letters but your word was invalid.

--- a/Scrabble/client/styles.css
+++ b/Scrabble/client/styles.css
@@ -350,6 +350,10 @@ md-radio-button {
     height: 100%;
 }
 
+#rackfiller {
+    visibility: hidden;
+}
+
 .selectedLetter {
     opacity: 0.5;
 }
